--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-//    implementation 'com.github.sigmadeltasoftware:CalPose:1.0.4'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
