--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hilt">
+    package="com.example.hilt"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name=".MyApplication"
@@ -9,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hilt">
+        android:theme="@style/Theme.Hilt"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
